# realsense-recorder

./: .gitignore  README.md  pyproject.toml  sl_project.docx
notebook/: cv2-lib.ipynb  experiment-framedrop.ipynb  mp4_from_bag.ipynb  read_raw_bag.ipynb
src/poc1/: __init__.py  bag_recorder.py  camera_handler.py  capturecard_source.py  codec.py  delivery.py  device_enum.py  frame_source.py  gui.py  monitor.py  pipeline.py  processor.py  proof.py  quiet.py  realsense_source.py  recorder.py  run_poc1_tests.py  stream_viewer.py  verifier.py  virtual_cam_sender.py  virtualcam_source.py
src/realsense_recorder/: utils.py
src/realsense_recorder/camera/: os_helper.py  utils.py
tests/: test_pipeline.py
