[project]
name = "realsense-recorder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.10.9",
    "opencv-python>=5.0.0.93",
    "pyrealsense2>=2.58.2.10647",
]

[dependency-groups]
dev = [
    "ipykernel>=7.3.0",
]

[tool.uv]
package=true
cache-dir = ".uv-cache"