[project]
name = "poc1-recorder"
version = "0.1.0"
description = "POC1: FHD/120fps recording pipeline proof (fake / virtualcam / webcam / RealSense)"
requires-python = ">=3.10"
dependencies = [
    "opencv-python>=4.9.0",
    "numpy>=1.26.0",
    "pyvirtualcam>=0.11.0",
    "psutil>=5.9.0",
    "pillow>=10.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]
realsense = [
    "pyrealsense2>=2.54.0",
]

[project.scripts]
poc1-gui = "poc1.gui:main"
poc1-proof = "poc1.proof:main"
poc1-verify = "poc1.verifier:main"
poc1-tests = "poc1.run_poc1_tests:main"
poc1-delivery = "poc1.delivery:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/poc1"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
